@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-29T08:14:47Z",
-  "count_outdated" : 422,
-  "uniques_outdated" : 228,
-  "count" : 445,
+  "timestamp" : "2022-07-29T16:17:01Z",
+  "count_outdated" : 424,
+  "uniques_outdated" : 229,
+  "count" : 446,
   "uniques" : 240,
   "clones" : [
-    {
-      "timestamp": "2022-07-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-20T00:00:00Z",
       "count": 3,
